fixed gif display scale on mobiles

--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ section{
  justify-content: center;
 }
 
-#logo{
- border-radius: 10px;
-}
-
 #contact{
 background: linear-gradient(0deg, rgba(0,18,32,1) 0%, rgba(14,89,169,1) 100%););
 }
